# gh-actions-scraping-MY-houses

./: .buildinfo  .coverage  01-paper.html  CONTRIBUTING.md  DockerFile  Dockerfile  LICENSE  README.md  README.txt  backup.txt  base_notebook.ipynb  docker-compose.yml  environment.yml  genindex.html  housing_data.ipynb  index.html  index.md  main.py  note.md  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  script.py  search.html  searchindex.js  status.html  step_documentation.txt  tutorial.html
.doctrees/: 01-paper.doctree  environment.pickle  index.doctree  note.doctree  tutorial.doctree
.doctrees/notebook/: housing_data.doctree
.github/workflows/: Sync_to_Hugging_Face_hub.yml  check_file_size.yml  create_report.yml  documentation.yml  main.yml  note.txt  scrape.yml
_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scrape_housing_data.html  search.html  searchindex.js
_sources/: note.md.txt  status.md.txt  tutorial.md.txt
app/: DockerFile  README.md  document.txt  main.py  requirements.txt
data/: 2024-02-04.json  2024-02-05.json  2024-02-06.json  2024-02-07.json  2024-02-08.json  2024-02-09.json  2024-02-10.json  2024-02-11.json
doc/: conf.py  index.rst  usage.md
docs/: 01-paper.md  conf.py  index.md  note.md  status.md  tutorial.md
notebook/: housing_data.html  housing_data.ipynb
report/: day1.html
resources/: resources.txt  step-record.txt  steps.md
scrape_housing_data/: script.py  script2.py
source/: conf.py
src/: script.py
tests/: conftest.py  test_script.py
(+103 files in other folders)
