[tool.poetry]
name = "gh-actions-scraping-my-houses"
version = "0.1.0"
description = ""
authors = ["Tan Yong Sheng"]
readme = "README.md"
packages = [{include = "gh_actions_scraping_my_houses"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
pandas = "1.4.3"
pytz = "2022.1"
nbsphinx = "^0.9.3"
furo = "^2024.1.29"
pandoc = "^2.3"
sphinx-autobuild = "^2024.2.4"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
myst-parser = "^2.0.0"
nbclient = "^0.9.0"
pandoc = "^2.3"
sphinx-autobuild = "^2024.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
